2011-09-20  Sancho Lerena <slerena@artica.es>

	*  util-all
	util-bzr-update
	util-create-po
	util-README
	util-update-po
	util-generate-tarball
	extract_newlines.sh
	util-create-template
	util-compile-mo: Updated strings and scripts to manipulate
	language data.

2011-09-20  Vanessa Gil <vgil@artica.es>

	* integria_dbdata.sql
	* integria_demo.sql: Added disabled field for tusuario

2011-09-16  Sancho Lerena <slerena@artica.es>

	* integria_db.sql: Added disabled field for tusuario

	* index.php: Updated login method to do not process
	disabled users.

	* general/password_recovery.php: Do not recover disabled
	users.

	* godmode/grupos/lista_grupos.php: Fixed pagination problem.

	* godmode/setup/setup.php: Added new parameter (max file size) 
	useful for uploads.

	* godmode/usuarios/configurar_usuarios.php: implemented disabling
	a user.

	* godmode/usuarios/lista_usuarios.php: modified listing of users,
	now shows disabled field.

	* functions_config.php: Support for max file size.

	* functions_db.php: get_user_visible_users() show ordered output.

	* integria.css, main_menu.php, side_menu.php: Some visual changes on
	menus (new icons), and added "new xxx" on groups and users.

	* browse.php: File releases are now easier, only displays files not in
	a file release yet.

2011-09-13  Sergio Martin <sergio.martin@artica.es>

	* integria_dbdata.sql: Added default app categories

2011-09-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Changed return value
	in get_inventories function when there are no
	inventories.

2011-08-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_fsgraph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php: Merged new changes on the
	graph library

2011-08-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php: Merged the graph library
	with pandora
