@@ -1,3 +1,8 @@
+2011-09-21  Vanessa Gil <vgil@artica.es>
+
+	* operation/projects/people_manager.php: Fixed: the same user can be added 
+	more than one time to the same project.
+
 2011-09-20  Sancho Lerena <slerena@artica.es>
 
 	*  util-all
